--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-property-decorator": "^8.4.2",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
