--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "ant-design-vue": "^1.6.4",
     "core-js": "^3.6.5",
+    "dedent": "^0.7.0",
     "element-ui": "^2.13.2",
     "emoji-mart-vue": "^2.6.6",
+    "quill-emoji": "^0.1.8",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
@@ -40,6 +42,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
+    "quill-image-extend-module": "^1.1.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
