--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,9 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "src/main.js",
+    "src/store/index.js"
   ],
   "exclude": [
     "node_modules"
